
                        Doomsday Engine Change Log
                        ==========================
               Legend: + added, - fixed, * improved/changed


Version 1.7.14 (work in progress)
--------------
! Maintenance Release
+ Model -> Sub -> Skin file: file name of the skin (can be anything; use
  this if it isn't possible to use the model's skin list)
+ generator flag 'gnf_srcdir': rotate particle vector
* models close to the viewpoint won't disappear
* max number of data files increased from 128 to 1024 (-file)
- fixed: edge artifacts around translucent sprites
- fixed: sfx sometimes pop with the default sound driver (DS8)
- fixed: loading DEDs from virtual directories
- fixed: particle center offset angle
- fixed: loading order of 3D models (mixed up demon/spectre skins)
- fixed: lighting on vertically inverted models
- quietly allow the use of undefined sprite frames (object hidden)

jDoom:
* "Read This" screens are not affected by menu-scale, skull hidden

jHeretic:
- game can only be saved during normal game play
- fixed: cycling down from Elvenwand skips Staff (bug 813773)

jHexen:
+ lava and fire textures glow
* support for the Hexen 4-level demo


Version 1.7.13
--------------
! Maintenance Release
* model offset and scale are interpolated (Model -> Offset XYZ,
  Model -> Scale XYZ)
* overridden model defs are no longer loaded at all (bug 760099)
* number of screenshots is not limited to 100
* screenshot file names are selected according to game mode
- fixed: semicolon in bindings (key name "smcln")
- fixed: music volume = zero prevents songs from changing
- fixed: halos flicker sometimes through doors
- a shadow is not rendered if it would be above the object
- fixed: crash when loading external resources of color-mapped sprites

Network:
- fixed: player gets stuck in enemies
- fixed: player gets stuck in a moving plane (elevator, door)
- fixed: crash in clmobj handling
- fixed: recording demos with multiple local players