@@ -323,6 +323,7 @@ int DED_AddPtcGen(ded_t *ded, const char *state)
 	int i;
 
 	strcpy(gen->state, state);
+	gen->submodel = -1;	// Default choice (either zero or one).
 	for(i = 0; i < DED_PTC_STAGES; i++)
 		gen->stages[i].model = -1;
 
