@@ -1216,6 +1216,7 @@ int DED_ReadData(ded_t *ded, char *buffer, const char *sourceFile)
 				RV_VEC("Vector", gen->vector, 3)
 				RV_FLT("Vector Rnd", gen->vec_variance)
 				RV_VEC("Center", gen->center, 3)
+				RV_INT("Submodel", gen->submodel)
 				RV_FLT("Spawn radius", gen->spawn_radius)
 				RV_FLT("Min spawn radius", gen->min_spawn_radius)
 				RV_FLT("Distance", gen->maxdist)
